<resources>
    <string name="app_name">CharacterSheet</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="landing_fragment_label">Landing Fragment</string>
    <string name="create_character_fragment_label">Create Character</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="create_character">Create a Character</string>
    <string name="load_character">Load a Character</string>
    <string name="select_character_clazz">Select Character Class</string>
    <string name="select_character_race">Select Character Race</string>
    <string name="enter_character_name">Enter Character Name</string>
    <string name="enter_character_addl_info">Enter Additional Character Information</string>
    <string name="addl_info_hint">Additional Character Info</string>
    <string name="name_hint">Name</string>
    <string name="save_character">Save Character</string>
    <string name="edit_character">Edit Character</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>